# aiogram-template

./: .gitignore  README.md  pyproject.toml
app/: __main__.py  config.py
app/bot/: __init__.py
app/bot/handlers/: __init__.py
app/bot/handlers/private/: help.py  start.py
