[tool.poetry]
name = "aiogram-template"
version = "0.1.0"
description = ""
authors = ["Kudyakov Artem <t3m8ch@yandex.ru>"]
license = "MIT"
packages = {
    { include = "app" }
}

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
