[tool.poetry]
name = "aiogram-template"
version = "0.1.0"
description = ""
authors = ["Kudyakov Artem <t3m8ch@yandex.ru>"]
license = "MIT"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
pydantic_loader = {extras = ["toml"], version = "^0.9.1"}
aiogram = "^2.14.3"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
